--- a/src/components/Setter/CounterSetter.module.css
+++ b/src/components/Setter/CounterSetter.module.css
@@ -5,7 +5,7 @@
     margin: 5%;
 }
 
-.inputblock {
+.inputField {
     text-align: center;
     background-color: #61dafb;
     padding: 25px 25px;
