--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,7 +7,7 @@
 }
 
 .button {
-    background-color: #61dafb; /* disabled: #c2fdf4*/
+    background-color: #61dafb;
     padding: 20px 40px;
     margin: 10px;
     border-radius: 10px;
